--- a/templates/one_snowboard.html
+++ b/templates/one_snowboard.html
@@ -1,37 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/snowboard/">RED4M</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="/snowboard/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Brands</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Sign in</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </div>
-        </div>
-    </nav>
+{% extends 'base.html'%}
+{% load static %}
 
-    <div class="container">
+
+{% block title %}
+Product {{ article.title }}
+{% endblock %}
+
+
+{%block detail%}
+<div class="container">
         <img src="{{ snowboard.image.url}}" alt="..." id><br>
         <a>Сноуборд {{ snowboard.name }}</a><br>
         <a>Цена{{ snowboard.cost }} руб.</a><br>
@@ -39,6 +16,6 @@
         <a>Страна производитель {{ snowboard.manufacturer_country }}</a><br>
     </div>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-</body>
-</html>
+
+{%endblock%}
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
