--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                   <a class="nav-link" href="#">Brands</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Sign in</a>
+                  <a class="nav-link " href="{% url 'login' %}" tabindex="-1" aria-disabled="true">Sign in</a>
                 </li>
               </ul>
               <form class="d-flex">
