--- a/templates/login.html
+++ b/templates/login.html
@@ -68,42 +68,47 @@ login
           <p class="text-center">or:</p>
 
           <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="email" id="loginName" class="form-control" />
-            <label class="form-label" for="loginName">Email or username</label>
-          </div>
+            <form method="POST">
+                {% csrf_token %}
+                {{ forms }}
+{#                    <button type="submit" class="btn btn-ouline-warning">Войти</button>#}
 
-          <!-- Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="loginPassword" class="form-control" />
-            <label class="form-label" for="loginPassword">Password</label>
-          </div>
-
-          <!-- 2 column grid layout -->
-          <div class="row mb-4">
-            <div class="col-md-6 d-flex justify-content-center">
-              <!-- Checkbox -->
-              <div class="form-check mb-3 mb-md-0">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  value=""
-                  id="loginCheck"
-                  checked
-                />
-                <label class="form-check-label" for="loginCheck"> Remember me </label>
+              <div class="form-outline mb-4">
+                <input type="email" id="loginName" class="form-control" />
+                <label class="form-label" for="loginName">Email or username</label>
               </div>
-            </div>
 
-            <div class="col-md-6 d-flex justify-content-center">
-              <!-- Simple link -->
-              <a href="#!">Forgot password?</a>
-            </div>
-          </div>
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <input type="password" id="loginPassword" class="form-control" />
+                <label class="form-label" for="loginPassword">Password</label>
+              </div>
 
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+              <!-- 2 column grid layout -->
+              <div class="row mb-4">
+                <div class="col-md-6 d-flex justify-content-center">
+                  <!-- Checkbox -->
+                  <div class="form-check mb-3 mb-md-0">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="loginCheck"
+                      checked
+                    />
+                    <label class="form-check-label" for="loginCheck"> Remember me </label>
+                  </div>
+                </div>
 
+                <div class="col-md-6 d-flex justify-content-center">
+                  <!-- Simple link -->
+                  <a href="#!">Forgot password?</a>
+                </div>
+              </div>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+            </form>
           <!-- Register buttons -->
           <div class="text-center">
             <p>Not a member? <a href="#!">Register</a></p>
