--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                   <a class="nav-link " href="{% url 'login' %}" tabindex="-1" aria-disabled="true">Sign in</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="{% url 'register' %}" tabindex="-1" aria-disabled="true">Register</a>
+                </li>
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
